src/test/ui/error-codes/E0478.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/E0478.rs:4:5
   |
LL |     child: Box<dyn Wedding<'kiss> + 'SnowWhite>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime 'SnowWhite as defined on the struct at 3:22
  --> $DIR/E0478.rs:3:22
   |
LL | struct Prince<'kiss, 'SnowWhite> {
   |                      ^^^^^^^^^^
note: but lifetime parameter must outlive the lifetime 'kiss as defined on the struct at 3:15
  --> $DIR/E0478.rs:3:15
   |
LL | struct Prince<'kiss, 'SnowWhite> {
   |               ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
